<?xml version="1.0"?>
<package>
    <name>robot_msgs</name>
    <version>1.0.0</version>
    <description>
        The robot msgs package provides all the messages for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0</license>
    <url>https://github.com/RoboMaster/RoboRTS</url>
    

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>EulerAngles</build_depend>
    <build_depend>vision</build_depend>
    <build_depend>vision_pts</build_depend>
    <build_depend>control</build_depend>
    <build_depend>sc_rc_msg</build_depend>
    <build_depend>robot_ctrl</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>EulerAngles</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>vision</run_depend>
    <run_depend>vision_pts</run_depend>
    <run_depend>control</run_depend>
    <run_depend>sc_rc_msg</run_depend>
    <run_depend>robot_ctrl</run_depend>

    <export>
    </export>

</package>
